<resources>
    <string name="app_name">InstagramClone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="image">image</string>
    <string name="tv_test">UPD: Что происходит? 24 команды были кикнуты (https://vk.com/s1mple41l?w=wall-64241379_1314992) из ESL Pro League Season 11. Выбор 24 коллективов, вошедших в список участников, производился на основе рейтинга ESL (что раскритиковал s1mple: https://vk.com/s1mple41l?w=wall-64241379_1315049)

Thorin в твиттере просит ассоциацию профессиональных игроков в CS:GO сделать что-то с действиями ESL:

"Если CSPPA (ассоциация профессиональных игроков) разозлится на меня, а не на ESL, то это скажет о многом. Кого безопаснее атаковать и критиковать? Какие интересы игроков вы представляете?

Я хочу, чтобы вы разозлились и направили свой гнев на того, кто его заслуживает. Делайте свой выбор с умом.

Подавляющее большинство команд еще не подписали контракт с ESL, и многие организации готовы позволить игрокам выбирать, с какой лигой подписывать контракт. Если вы хотите участвовать в EPL, то объясните свои мысли по поводу текущей ситуации.

Эта глава книги еще не закрыта. Вы еще можете помочь завершить ее лучшим образом перед началом года. Используйте свою мощь или потеряйте ее. Как только контракты на 4-6 лет будут заключены и формат будет закреплен на бумаге, все будет кончено.

ЭТО поворотный момент в истории ESL Pro League и ваших отношений с ESL. Подумайте, чьи убеждения вы отстаиваете".

Petar Milovanovic (сооснователь HLTV):

"Давайте вспомним, что помимо этих лиг будут проходить и другие турниры по CS:GO.

Матчи регулярного сезона не смогут конкурировать с интересными противостояниями в плей-оффах, обычно их очень мало.

И я с нетерпением жду такие интересные матчи в плей-оффах".

//BIG - дословно "большой", но в данном контексте подразумевается именно интересное противостояние между двумя лучшими коллективами планеты.
    DeKay (опять же о поступке ESL, которые кикнули из про-лиги 11 сезона 24 команды):

Единственное, что я бы хотел в данный момент - это предупредить всех, на кого повлияли изменения от ESL, раньше, чем я смог это сделать. Логистика просто не сработала должным образом.
    </string>
    <string name="vadimey">Vadimey</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="_0">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="john_wick">John Wick</string>
    <string name="stronger_than_ever">Stronger than ever…</string>
    <string name="activity">Activity</string>
    <string name="earlier">Earlier</string>
    <string name="close">close</string>
    <string name="save">save</string>
    <string name="camera">camera</string>
</resources>
